{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "dfaa679e-1dc9-48e5-816e-bb2f61907359",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "3f7baa98-7492-4510-ac48-6976c9398efc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "fc795996-a773-4f52-9302-8fdce011869c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "563430d5-87b1-4098-afbf-d92580f761c5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "094248e6-2668-4d60-8f8e-0fccf724e0a3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f6a72b55-56e5-450c-87f1-1f9beb2a443a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "02cc05f1-a966-4c7a-a85d-9bf0af3586a5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "273a3849-0bc2-4a18-9087-898b33fbbe2f",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "68181de8-a53e-438a-ae92-b491eba2b8b3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "4fb15214-e42d-48d7-bcfc-efdf115088b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "e40bf766-5d66-430d-b92e-2b54edd2df84",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "00b1cea9-ba42-41c1-888c-61f5d8a05413",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "feff64a2-250a-4b1e-addc-a8f259a1bc7b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "d80e1dda-ede0-426e-b2e3-9b09ef757d0c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "26afacc0-fe59-41b4-bade-fa3d048c4e3e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "10c05c22-329a-47f5-981c-ae38a6f88db7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TrackedDevicePosition",
                    "type": "PassThrough",
                    "id": "191260ca-7222-4e4d-8ff1-1bba430aa60b",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TrackedDeviceOrientation",
                    "type": "PassThrough",
                    "id": "6029a51a-f2e3-4ecc-8c4a-816c9f8c3e22",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Navigate",
                    "type": "PassThrough",
                    "id": "7bbd0b17-829c-40bf-85bc-e478dd33af66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "83a008a1-f7b1-4dd5-b1ed-ec8194fc23ae",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d54dc035-6785-47cc-a55f-1cb2378822d5",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "314cc06d-bcae-45a2-984f-b54cce958704",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23021f14-8e9a-4da1-917f-d721d0501f14",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be10abb7-b6e5-4ff0-bbd7-3267f66cde35",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7e11721-db1f-464b-b8ff-07f685d963c6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed900e07-68d3-4a98-8138-7fa4b3d99b56",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38f7c55b-c2d8-48e0-8cd7-53da4b3cce43",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a50aab9b-4109-44d8-9eba-7a5ce73099e0",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fa14dcd-be1a-41b8-99ac-5b0dc8ec6c4a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9919c892-7aed-4ef4-9557-1a185bc741d1",
                    "path": "<XRController>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackedDevicePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51877dea-c77a-4090-961f-1a259f5641bb",
                    "path": "<XRController>/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackedDeviceOrientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63c17835-c693-4960-92d3-a23a983e7ac0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerCamera",
            "id": "0c2505d9-943d-4aa8-8ba9-682308f9b164",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "ef3382d4-791c-415e-94b2-23e744b67a90",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b75200dc-884f-4ff8-bd1f-e2c041e3ce18",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "1a80928e-07f2-4872-bd88-bd5203175fd3",
            "actions": [
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "3cccdc9c-20bc-4d63-8c50-ae2f3bfefd64",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "da096de3-6f56-4137-89db-fb6f55c3f40d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "8066df48-4d82-4d6e-9ccd-97b825695865",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "106fe4a8-7ddd-41fd-89f8-f2900a614921",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold Shift",
                    "type": "PassThrough",
                    "id": "516fe2f5-489d-4a17-828c-d41e176a2197",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold RT",
                    "type": "PassThrough",
                    "id": "62cf9629-c7f2-4fff-a47a-acae34eff046",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "78ad1dcc-6da6-4252-82de-60f54cfa0902",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Look On",
                    "type": "Button",
                    "id": "f4d3401f-9232-48ca-9303-8cfa5a5ce955",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seek Left Lock On target",
                    "type": "Button",
                    "id": "034fa0b3-83c3-4c72-a621-71c363439ca1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seek Right Lock On target",
                    "type": "Button",
                    "id": "c00ed642-4eee-4ad9-b13b-27def4a83cd4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a01697fc-5280-4bf3-ab8b-3be478cc8fbb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78f42d39-fe06-40aa-a14b-0faa5bde975c",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7db7406e-be8b-4446-9c8b-26febbdec0a6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5a85d58-bf14-4511-9794-70274fb5ce7c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "642b3697-1f24-41ef-98e0-571f96dfac5f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5108ecf-a558-4d92-8e18-c3d909967e5c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75d65736-e6be-4318-b623-1b2cd05aa0ab",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85381173-3edc-4a1c-b718-12692da45ead",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look On",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b801cde-fc7e-4c37-9535-6082e1d9a283",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look On",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "993e58b3-c45f-4f4f-8982-68b37e4bd55e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seek Left Lock On target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd8ada1c-7452-4c1c-8182-fa631f167301",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seek Right Lock On target",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}